--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -6,10 +6,24 @@ main: me.jeremy.ifp.main
 commands:
   ifp:
     description: The main command for this loverly plugin!
+  ifpa:
+    description: The main admin command for this loverly plugin!
   itemfilter:
     description: A command for general users to use for simplicity.
+  itemfilteradmin:
+    description: A command for admins to use for simplicity.
 permissions:
   itemfilterpickup.admin:
+    default: op
+  itemfilterpickup.admin.reload:
+    default: op
+  itemfilterpickup.admin.edit:
+    default: op
+  itemfilterpickup.admin.toggle:
+    default: op
+  itemfilterpickup.public.byass:
+    default: op
+  itemfilterpickup.public.view:
     default: op
   itemfilterpickup.user:
     default: op
