--- a/src/blocks.yml
+++ b/src/blocks.yml
@@ -300,24 +300,310 @@ Decoration Blocks:
   - BANNER:1
   - BANNER:0
 Redstone:
-  Block: REDSTONE:0:1:none:&cR&8edstone:none
+  Block: REDSTONE:0:1:none:&4R&8edstone:none
   Blocks:
+  - DISPENSER:0
+  - NOTE_BLOCK:0
+  - PISTON_STICKY_BASE:0
+  - PISTON_BASE:0
+  - TNT:0
+  - LEVER:0
+  - STONE_PLATE:0
+  - WOOD_PLATE:0
+  - REDSTONE_TORCH_ON:0
+  - STONE_BUTTON:0
+  - TRAP_DOOR:0
+  - FENCE_GATE:0
+  - REDSTONE_LAMP_OFF:0
+  - TRIPWIRE_HOOK:0
+  - WOOD_BUTTON:0
+  - GOLD_PLATE:0
+  - IRON_PLATE:0
+  - DAYLIGHT_DETECTOR:0
+  - REDSTONE_BLOCK:0
+  - HOPPER:0
+  - DROPPER:0
+  - IRON_TRAPDOOR:0
+  - SPRUCE_FENCE_GATE:0
+  - BIRCH_FENCE_GATE:0
+  - JUNGLE_FENCE_GATE:0
+  - DARK_OAK_FENCE_GATE:0
+  - ACACIA_FENCE_GATE:0
+  - WOOD_DOOR:0
+  - IRON_DOOR:0
+  - REDSTONE:0
+  - DIODE:0
+  - REDSTONE_COMPARATOR:0
+  - SPRUCE_DOOR_ITEM:0
+  - BIRCH_DOOR_ITEM:0
+  - JUNGLE_DOOR_ITEM:0
+  - ACACIA_DOOR_ITEM:0
+  - DARK_OAK_DOOR_ITEM:0
 Transportation:
-  Block: BEDROCK:0:1:none:&cT&8ransportation:none
+  Block: POWERED_RAIL:0:1:none:&6T&8ransportation:none
   Blocks:
+  - POWERED_RAIL:0
+  - DETECTOR_RAIL:0
+  - RAILS:0
+  - ACTIVATOR_RAIL:0
+  - MINECART:0
+  - SADDLE:0
+  - BOAT:0
+  - STORAGE_MINECART:0
+  - POWERED_MINECART:0
+  - CARROT_STICK:0
+  - EXPLOSIVE_MINECART:0
+  - HOPPER_MINECART:0
 Miscellaneous:
-  Block: BEDROCK:0:1:none:&cM&8iscellaneous:none
+  Block: LAVA_BUCKET:0:1:none:&eM&8iscellaneous:none
   Blocks:
+  - BEACON:0
+  - BUCKET:0
+  - WATER_BUCKET:0
+  - LAVA_BUCKET:0
+  - SNOW_BALL:0
+  - MILK_BUCKET:0
+  - PAPER:0
+  - BOOK:0
+  - SLIME_BALL:0
+  - BONE:0
+  - ENDER_PEARL:0
+  - EYE_OF_ENDER:0
+  - MONSTER_EGG:50
+  - MONSTER_EGG:51
+  - MONSTER_EGG:52
+  - MONSTER_EGG:54
+  - MONSTER_EGG:55
+  - MONSTER_EGG:56
+  - MONSTER_EGG:57
+  - MONSTER_EGG:58
+  - MONSTER_EGG:59
+  - MONSTER_EGG:60
+  - MONSTER_EGG:61
+  - MONSTER_EGG:62
+  - MONSTER_EGG:65
+  - MONSTER_EGG:66
+  - MONSTER_EGG:67
+  - MONSTER_EGG:68
+  - MONSTER_EGG:90
+  - MONSTER_EGG:91
+  - MONSTER_EGG:92
+  - MONSTER_EGG:93
+  - MONSTER_EGG:94
+  - MONSTER_EGG:95
+  - MONSTER_EGG:96
+  - MONSTER_EGG:98
+  - MONSTER_EGG:100
+  - MONSTER_EGG:101
+  - MONSTER_EGG:120
+  - EXP_BOTTLE:0
+  - FIREBALL:0
+  - BOOK_AND_QUILL:0
+  - EMPTY_MAP:0
+  - FIREWORK_CHARGE:0
+  - IRON_BARDING:0
+  - GOLD_BARDING:0
+  - DIAMOND_BARDING:0
+  - GOLD_RECORD:0
+  - GREEN_RECORD:0
+  - RECORD_3:0
+  - RECORD_4:0
+  - RECORD_5:0
+  - RECORD_6:0
+  - RECORD_7:0
+  - RECORD_8:0
+  - RECORD_9:0
+  - RECORD_10:0
+  - RECORD_11:0
+  - RECORD_12:0
 Foodstuffs:
-  Block: BEDROCK:0:1:none:&cF&8oodstuffs:none
+  Block: APPLE:0:1:none:&9F&8oodstuffs:none
   Blocks:
+  - APPLE:0
+  - MUSHROOM_SOUP:0
+  - BREAD:0
+  - PORK:0
+  - GRILLED_PORK:0
+  - GOLDEN_APPLE:0
+  - GOLDEN_APPLE:1
+  - RAW_FISH:0
+  - RAW_FISH:1
+  - RAW_FISH:2
+  - RAW_FISH:3
+  - COOKED_FISH:0
+  - COOKED_FISH:1
+  - CAKE:0
+  - COOKIE:0
+  - MELON:0
+  - RAW_BEEF:0
+  - COOKED_BEEF:0
+  - RAW_CHICKEN:0
+  - COOKED_CHICKEN:0
+  - ROTTEN_FLESH:0
+  - SPIDER_EYE:0
+  - CARROT_ITEM:0
+  - POTATO_ITEM:0
+  - BAKED_POTATO:0
+  - POISONOUS_POTATO:0
+  - PUMPKIN_PIE:0
+  - RABBIT:0
+  - COOKED_RABBIT:0
+  - RABBIT_STEW:0
+  - MUTTON:0
+  - COOKED_MUTTON:0
 Tools:
-  Block: BEDROCK:0:1:none:&cT&8ools:none
+  Block: IRON_AXE:0:1:none:&fT&8ools:none
   Blocks:
+  - IRON_SPADE:0
+  - IRON_PICKAXE:0
+  - IRON_AXE:0
+  - FLINT_AND_STEEL:0
+  - WOOD_SPADE:0
+  - WOOD_PICKAXE:0
+  - WOOD_AXE:0
+  - STONE_SPADE:0
+  - STONE_PICKAXE:0
+  - STONE_AXE:0
+  - DIAMOND_SPADE:0
+  - DIAMOND_PICKAXE:0
+  - DIAMOND_AXE:0
+  - GOLD_SPADE:0
+  - GOLD_PICKAXE:0
+  - GOLD_AXE:0
+  - WOOD_HOE:0
+  - STONE_HOE:0
+  - IRON_HOE:0
+  - DIAMOND_HOE:0
+  - GOLD_HOE:0
+  - COMPASS:0
+  - FISHING_ROD:0
+  - WATCH:0
+  - SHEARS:0
+  - LEASH:0
+  - NAME_TAG:0
 Combat:
-  Block: BEDROCK:0:1:none:&cC&8ombat:none
+  Block: GOLD_SWORD:0:1:none:&eC&8ombat:none
   Blocks:
+  - BOW:0
+  - ARROW:0
+  - IRON_SWORD:0
+  - WOOD_SWORD:0
+  - STONE_SWORD:0
+  - DIAMOND_SWORD:0
+  - GOLD_SWORD:0
+  - LEATHER_HELMET:0
+  - LEATHER_CHESTPLATE:0
+  - LEATHER_LEGGINGS:0
+  - LEATHER_BOOTS:0
+  - CHAINMAIL_HELMET:0
+  - CHAINMAIL_CHESTPLATE:0
+  - CHAINMAIL_LEGGINGS:0
+  - CHAINMAIL_BOOTS:0
+  - IRON_HELMET:0
+  - IRON_CHESTPLATE:0
+  - IRON_LEGGINGS:0
+  - IRON_BOOTS:0
+  - DIAMOND_HELMET:0
+  - DIAMOND_CHESTPLATE:0
+  - DIAMOND_LEGGINGS:0
+  - DIAMOND_BOOTS:0
+  - GOLD_HELMET:0
+  - GOLD_CHESTPLATE:0
+  - GOLD_LEGGINGS:0
+  - GOLD_BOOTS:0
 Brewing:
-  Block: BEDROCK:0:1:none:&cB&8rewing:none
+  Block: POTION:0:1:none:&9B&8rewing:none
+  Blocks:
+  - GHAST_TEAR:0
+  - POTION:0
+  - POTION:1
+  - POTION:33
+  - POTION:65
+  - POTION:2
+  - POTION:34
+  - POTION:66
+  - POTION:67
+  - POTION:35
+  - POTION:4
+  - POTION:36
+  - POTION:68
+  - POTION:69
+  - POTION:37
+  - POTION:38
+  - POTION:70
+  - POTION:40
+  - POTION:72
+  - POTION:9
+  - POTION:41
+  - POTION:73
+  - POTION:42
+  - POTION:74
+  - POTION:11
+  - POTION:43
+  - POTION:75
+  - POTION:76
+  - POTION:44
+  - POTION:45
+  - POTION:77
+  - POTION:46
+  - POTION:78
+  - GLASS_BOTTLE:0
+  - FERMENTED_SPIDER_EYE:0
+  - BLAZE_POWDER:0
+  - MAGMA_CREAM:0
+  - BREWING_STAND_ITEM:0
+  - CAULDRON_ITEM:0
+  - SPECKLED_MELON:0
+  - GOLDEN_CARROT:0
+  - RABBIT_FOOT:0
 Materials:
-  Block: BEDROCK:0:1:none:&cM&8aterials:none
+  Block: STICK:0:1:none:&fM&8aterials:none
+  Blocks:
+  - COAL:0
+  - COAL:1
+  - DIAMOND:0
+  - IRON_INGOT:0
+  - GOLD_INGOT:0
+  - STICK:0
+  - BOWL:0
+  - STRING:0
+  - FEATHER:0
+  - SULPHUR:0
+  - SEEDS:0
+  - WHEAT:0
+  - FLINT:0
+  - LEATHER:0
+  - CLAY_BRICK:0
+  - CLAY_BALL:0
+  - SUGAR_CANE:0
+  - EGG:0
+  - GLOWSTONE_DUST:0
+  - INK_SACK:0
+  - INK_SACK:1
+  - INK_SACK:2
+  - INK_SACK:3
+  - INK_SACK:4
+  - INK_SACK:5
+  - INK_SACK:6
+  - INK_SACK:7
+  - INK_SACK:8
+  - INK_SACK:9
+  - INK_SACK:10
+  - INK_SACK:11
+  - INK_SACK:12
+  - INK_SACK:13
+  - INK_SACK:14
+  - INK_SACK:15
+  - SUGAR:0
+  - PUMPKIN_SEEDS:0
+  - MELON_SEEDS:0
+  - BLAZE_ROD:0
+  - GOLD_NUGGET:0
+  - NETHER_STALK:0
+  - EMERALD:0
+  - NETHER_STAR:0
+  - NETHER_BRICK_ITEM:0
+  - QUARTZ:0
+  - PRISMARINE_SHARD:0
+  - PRISMARINE_CRYSTALS:0
+  - RABBIT_HIDE:0
