Added Help Line for Block:
This is a pretty easy feature to use. I should mention that using the
enchants on said items can result in breaking of the plugin. So I would
not suggest using it haha

--- a/bin/blocks.yml
+++ b/bin/blocks.yml
@@ -9,6 +9,7 @@ Menus:
 - Combat
 - Brewing
 - Materials
+#Item:Byte:Amount:Encahnt@value,Enchant@value:Name:Lore1,Lore2,Lore3
 Building Blocks:
   Block: BRICK:0:1:none:&aB&8uilding &aB&8locks:none
   Blocks:
